# mylibrary

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pythoncourse/: __init__.py
tests/: test_pythoncourse.py
