[tool.poetry]
name = "pythoncourse"
version = "0.0.0"
description = "Python package for M203 course"
authors = ["Faune Blanchard"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
